@@ -5,7 +5,7 @@ plot.smacofID <- function(x, plot.type = "confplot", plot.dim = c(1,2), bubscale
                           type = "p", pch = 20,  asp = 1, main, xlab, ylab, xlim, ylim, ...)
 
 # x ... object of class smacofID
-# plot.type ... types available: "confplot", "Shepard", "resplot"
+# plot.type ... types available: "confplot", "bubbleplot", "stressplot"
 # Shepard plot and resplot are performed over sum of distances
   
 {
@@ -27,8 +27,7 @@ plot.smacofID <- function(x, plot.type = "confplot", plot.dim = c(1,2), bubscale
 
     if (missing(xlim)) xlim <- range(x$gspace[,x1])*1.1
     if (missing(ylim)) ylim <- range(x$gspace[,y1])*1.1
-    
-    print(type)
+  
         
     plot(x$gspace[,x1], x$gspace[,y1], main = main, type = type, xlab = xlab, ylab = ylab, 
          xlim = xlim, ylim = ylim, pch = pch, asp = asp, col = col, ...)
@@ -39,46 +38,6 @@ plot.smacofID <- function(x, plot.type = "confplot", plot.dim = c(1,2), bubscale
     if (identify) {
        identify(x$gspace[,x1], x$gspace[,y1], labels = rownames(x$gspace), cex = 0.8)
     }
-  }
-
-  #---------------- Shepard diagram ------------------
-   if (plot.type == "Shepard") {
-    if (missing(main)) main <- paste("Shepard Diagram") else main <- main
-    if (missing(xlab)) xlab <- "Aggregated Observed Dissimilarities" else xlab <- xlab
-    if (missing(ylab)) ylab <- "Aggregated Configuration Distances" else ylab <- ylab
-
-    delta <- sumList(x$delta)
-    confdiss <- sumList(x$confdiss)
-    
-    if (missing(xlim)) xlim <- range(as.vector(delta))
-    if (missing(ylim)) ylim <- range(as.vector(confdiss))
-
-    plot(as.vector(delta), as.vector(confdiss), main = main, type = "p", pch = 1,
-         xlab = xlab, ylab = ylab, col = "darkgray", xlim = xlim, ylim = ylim, ...)
-
-    if (x$type == "ordinal") {
-      isofit <- isoreg(as.vector(delta), as.vector(confdiss))  #isotonic regression
-      points(sort(isofit$x), isofit$yf, type = "b", pch = 16)
-    } else {
-      regfit <- lsfit(as.vector(delta), as.vector(confdiss))   #linear regression
-      abline(regfit, lwd = 0.5)
-    }
-  }
-
-  #--------------- Residual plot -------------------- 
-  if (plot.type == "resplot") {
-    if (missing(main)) main <- paste("Residual plot") else main <- main
-    if (missing(xlab)) xlab <- "Aggregated Normalized Dissimilarities (d-hats)" else xlab <- xlab
-    if (missing(ylab)) ylab <- "Aggregated Configuration Distances" else ylab <- ylab
-    obsdiss <- sumList(x$dhat)
-    confdiss <- sumList(x$confdiss)
-
-    if (missing(xlim)) xlim <- range(as.vector(obsdiss))
-    if (missing(ylim)) ylim <- range(as.vector(confdiss))
-
-    plot(as.vector(obsdiss), as.vector(confdiss), main = main, type = "p", col = "darkgray", xlab = xlab, ylab = ylab, xlim = xlim, ylim = ylim,...)
-    abline(lsfit(as.vector(obsdiss), as.vector(confdiss)))
-
   }
 
   #----------------------- Stress decomposition -----------------
@@ -118,7 +77,7 @@ plot.smacofID <- function(x, plot.type = "confplot", plot.dim = c(1,2), bubscale
     xylabels <- x$gspace
     ysigns <- sign(x$gspace[,y1])
     xylabels[,2] <- (abs(x$gspace[,y1])-(x$gspace[,y1]*(bubsize/50)))*ysigns 
-    text(xylabels, rownames(x$gspace), pos = 1,cex = 0.7)    
+    text(xylabels, rownames(x$gspace), pos = 3,cex = 0.7)    
   }  
 
 }
