@@ -1,19 +1,12 @@
 ## compute stress per point
 
-spp <- function(dhat, confdiss, wgths) {
-  if (!is.list(dhat)) {                       ## all except smacofIndDiff
+spp <- function(dhat, confdiss, wgths) 
+{
     resmat <- as.matrix(wgths)*as.matrix(dhat - confdiss)^2    #point stress
     diag(resmat) <- NA
     spp <- colMeans(resmat, na.rm = TRUE)
     spp <- spp/sum(spp)*100
     names(spp) <- colnames(resmat) <- rownames(resmat) <- attr(dhat, "Labels") 
-  } else {                                   ## smacofIndDiff
-    resmat <- as.matrix(sumList(dhat) - sumList(confdiss))^2 ##point stress
-    diag(resmat) <- NA                    
-    spp <- colMeans(resmat, na.rm = TRUE)
-    spp <- spp/sum(spp)*100
-    names(spp) <- colnames(resmat) <- rownames(resmat) <- attr(dhat[[1]], "Labels") 
-  }
-  return(list(spp = spp, resmat = resmat))
+    return(list(spp = spp, resmat = resmat))
 }
 
